[package]
name = "databend-meta"
version = "0.1.0"
description = "distributed meta data service"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "databend-meta"
path = "src/bin/metasrv.rs"
doctest = false
test = false

[features]
default = ["simd"]
memory-profiling = ["common-base/memory-profiling"]
simd = ["common-arrow/simd"]
tokio-console = ["common-tracing/console", "common-base/tracing"]

[dependencies]
# Workspace dependencies
common-arrow = { path = "../common/arrow" }
common-base = { path = "../common/base" }
common-exception = { path = "../common/exception" }
common-grpc = { path = "../common/grpc" }
common-macros = { path = "../common/macros" }
common-meta-api = { path = "../common/meta/api" }
common-meta-grpc = { path = "../common/meta/grpc" }
common-meta-raft-store = { path = "../common/meta/raft-store" }
common-meta-sled-store = { path = "../common/meta/sled-store" }
common-meta-types = { path = "../common/meta/types" }
common-tracing = { path = "../common/tracing" }

# Github dependencies
sled = { git = "https://github.com/datafuse-extras/sled", tag = "v0.34.7-datafuse.1", default-features = false }

# Crates.io dependencies
anyerror = "0.1.6"
anyhow = "1.0.58"
async-trait = "0.1.56"
clap = { version = "3.2.5", features = ["derive", "env"] }
futures = "0.3.21"
lazy_static = "1.4.0"
num = "0.4.0"
once_cell = "1.12.0"
poem = { version = "1.3.31", features = ["rustls"] }
prometheus = { version = "0.13.1", features = ["process"] }
prost = "0.10.4"
semver = "1.0.10"
serde = { version = "1.0.137", features = ["derive"] }
serde-bridge = "0.0.3"
serde_json = "1.0.81"
serfig = "0.0.2"
tempfile = "3.3.0"
tokio-stream = "0.1.9"
tonic = { version = "0.7.2", features = ["tls"] }
tonic-reflection = "0.4.0"
workspace-hack = { version = "0.1", path = "../common/workspace-hack" }

[dev-dependencies]
common-meta-api = { path = "../common/meta/api" }

async-entry = "0.3.1"
env_logger = "0.9.0"
maplit = "1.0.2"
pretty_assertions = "1.2.1"
regex = "1.5.6"
reqwest = { version = "0.11.11", features = ["json"] }
temp-env = "0.2.0"

[build-dependencies]
common-building = { path = "../common/building" }
