[package]
name = "databend-query"
version = "0.1.0"
description = "A real-time Cloud Distributed Query Engine"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "databend-query"
path = "src/bin/databend-query.rs"
doctest = false
test = false

[features]
default = ["simd"]
simd = ["common-arrow/simd"]
tokio-console = ["common-tracing/console", "common-base/tracing"]

[dependencies]
# Workspace dependencies
common-arrow = { path = "../common/arrow" }
common-base = { path = "../common/base" }
common-cache = { path = "../common/cache" }
common-clickhouse-srv = { path = "../common/clickhouse-srv" }
common-datablocks = { path = "../common/datablocks" }
common-datavalues = { path = "../common/datavalues" }
common-exception = { path = "../common/exception" }
common-grpc = { path = "../common/grpc" }
common-functions = { path = "../common/functions" }
common-infallible = { path = "../common/infallible" }
common-io = { path = "../common/io" }
common-management = { path = "../common/management" }
common-mem-allocator = { path = "../common/mem-allocator" }
common-meta-api = { path = "../common/meta/api" }
common-meta-embedded = { path = "../common/meta/embedded" }
common-meta-grpc = { path = "../common/meta/grpc" }
common-meta-sled-store = { path = "../common/meta/sled-store" }
common-meta-raft-store = { path = "../common/meta/raft-store" }
common-meta-types = { path = "../common/meta/types" }
common-macros = { path = "../common/macros" }
common-metrics = { path = "../common/metrics" }
common-planners = { path = "../common/planners" }
common-streams = { path = "../common/streams" }
common-tracing = { path = "../common/tracing" }
common-ast = { path = "../common/ast" }
common-dal-context = { path = "../common/dal-context" }

# Github dependencies
msql-srv = { git = "https://github.com/datafuse-extras/msql-srv", rev = "70aa0b2" }
sqlparser = { git = "https://github.com/datafuse-extras/sqlparser-rs", rev = "c33837e" }

# Crates.io dependencies
ahash = "0.7.6"
async-compat = "0.2.1"
async-trait = "0.1.52"
async-recursion = "1.0.0"
async-stream = "0.3.2"
poem = { version = "1.2.53", features = ["rustls", "multipart"] }
bumpalo = "3.9.1"
backoff = "0.4.0"
byteorder = "1.4.3"
bytes = "1.1.0"
cargo-license = "0.4.2"
cargo_metadata = "0.14.1"
chrono = "0.4.19"
chrono-tz = "0.6.1"
clap = { version = "3.0.14", features = ["derive", "env"] }
dyn-clone = "1.0.4"
futures = "0.3.21"
headers = "0.3.6"
hyper = "0.14.16"
once_cell = "1.9.0"
metrics = "0.18.0"
nom = "7.1.0"
num = "0.4.0"
num_cpus = "1.13.1"
octocrab = "0.15.4"
opendal = "0.0.3"
paste = "1.0.6"
prost = "0.9.0"
rand = "0.8.4"
reqwest = "0.11.9"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
sha1 = "0.10.0"
sha2 = "0.10.1"
threadpool = "1.8.1"
tokio-rustls = "0.23.2"
tokio-stream = { version = "0.1.8", features = ["net"] }
toml = "0.5.8"
tonic = "0.6.2"
uuid = { version = "1.0.0-alpha.1", features = ["serde", "v4"] }
walkdir = "2.3.2"
parquet-format-async-temp = "0.2.0"
petgraph = "0.6.0"
regex = "1.5.4"
bincode = "1.3.3"
# bit-vec = { version = "0.6.3", features = ["serde_std"] }
jwt-simple = "0.10.8"
rsa = "0.5.0"
base64 = "0.13.0"

[dev-dependencies]
clickhouse-driver = { git = "https://github.com/datafuse-extras/clickhouse_driver", rev = "9d2133f" }
criterion = "0.3.5"
maplit = "1.0.2"
mysql_async = "0.29.0"
pretty_assertions = "1.1.0"
reqwest = { version = "0.11.9", features = ["json", "native-tls"] }
tempfile = "3.3.0"
httpmock = "0.6.6"

[build-dependencies]
common-building = { path = "../common/building" }

[[bench]]
name = "bench_main"
harness = false
