[package]
name = "databend-query"
version = "0.1.0"
description = "A real-time Cloud Distributed Query Engine"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "databend-query"
path = "src/bin/databend-query.rs"
doctest = false
test = false

[features]
default = ["simd"]
simd = ["common-arrow/simd"]
tokio-console = ["common-tracing/console", "common-base/tracing"]
memory-profiling = ["common-mem-allocator/memory-profiling", "tempfile"]

[dependencies]
# Workspace dependencies
common-arrow = { path = "../common/arrow" }
common-ast = { path = "../common/ast" }
common-base = { path = "../common/base" }
common-cache = { path = "../common/cache" }
common-contexts = { path = "../common/contexts" }
common-datablocks = { path = "../common/datablocks" }
common-datavalues = { path = "../common/datavalues" }
common-exception = { path = "../common/exception" }
common-functions = { path = "../common/functions" }
common-grpc = { path = "../common/grpc" }
common-infallible = { path = "../common/infallible" }
common-io = { path = "../common/io" }
common-macros = { path = "../common/macros" }
common-management = { path = "../common/management" }
common-mem-allocator = { path = "../common/mem-allocator" }
common-meta-api = { path = "../common/meta/api" }
common-meta-embedded = { path = "../common/meta/embedded" }
common-meta-grpc = { path = "../common/meta/grpc" }
common-meta-raft-store = { path = "../common/meta/raft-store" }
common-meta-sled-store = { path = "../common/meta/sled-store" }
common-meta-types = { path = "../common/meta/types" }
common-metrics = { path = "../common/metrics" }
common-planners = { path = "../common/planners" }
common-streams = { path = "../common/streams" }
common-tracing = { path = "../common/tracing" }

# Github dependencies
bincode = { git = "https://github.com/datafuse-extras/bincode", rev = "fd3f9ff" }
opensrv-clickhouse = { git = "https://github.com/datafuselabs/opensrv", rev = "9690be9", package = "opensrv-clickhouse" }
opensrv-mysql = { git = "https://github.com/datafuselabs/opensrv", rev = "967477f1", package = "opensrv-mysql" }
sqlparser = { git = "https://github.com/datafuse-extras/sqlparser-rs", rev = "fee0056" }

# Crates.io dependencies
ahash = "0.7.6"
async-compat = "0.2.1"
async-recursion = "1.0.0"
async-stream = "0.3.3"
async-trait = "0.1.53"
backoff = "0.4.0"
backon = "0.0.2"
base64 = "0.13.0"
bit-vec = { version = "0.6.3", features = ["serde_std"] }
bumpalo = "3.9.1"
byteorder = "1.4.3"
bytes = "1.1.0"
chrono = "0.4.19"
chrono-tz = "0.6.1"
clap = { version = "3.1.8", features = ["derive", "env"] }
dyn-clone = "1.0.5"
enum_dispatch = "0.3.8"
futures = "0.3.21"
headers = "0.3.7"
http = "0.2.6"
hyper = "0.14.18"
itertools = "0.10.3"
jwtk = "0.2.3"
lazy_static = "1.4.0"
metrics = "0.18.1"
nom = "7.1.1"
num = "0.4.0"
num_cpus = "1.13.1"
octocrab = "0.15.4"
once_cell = "1.10.0"
opendal = { version = "0.6.0", features = ["retry"] }
openssl = { version = "0.10", features = ["vendored"] }
paste = "1.0.7"
petgraph = "0.6.0"
poem = { version = "=1.3.16", features = ["rustls", "multipart", "compression"] }
prost = "=0.9.0"
rand = "0.8.5"
regex = "1.5.5"
reqwest = "0.11.10"
rsa = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde-bridge = "0.0.3"
serde_json = "1.0.79"
serfig = "0.0.1"
sha1 = "0.10.1"
sha2 = "0.10.2"
tempfile = { version = "3.3.0", optional = true }
thiserror = "1.0.30"
threadpool = "1.8.1"
time = "0.3.9"
tokio-rustls = "0.23.3"
tokio-stream = { version = "0.1.8", features = ["net"] }
tonic = "=0.6.2"
twox-hash = "1.6.2"
typetag = "0.1.8"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
walkdir = "2.3.2"

[dev-dependencies]
clickhouse-driver = { git = "https://github.com/datafuse-extras/clickhouse_driver", rev = "cf978da" }
criterion = "0.3.5"
jwt-simple = "0.10.9"
maplit = "1.0.2"
mysql_async = "0.29.0"
pretty_assertions = "1.2.1"
reqwest = { version = "0.11.10", features = ["json", "native-tls"] }
temp-env = "0.2.0"
tempfile = "3.3.0"
toml = { version = "0.5.8", default-features = false }
url = "2.2.2"
wiremock = "0.5.12"

[build-dependencies]
common-building = { path = "../common/building" }

[[bench]]
name = "bench_main"
harness = false
