[package]
name = "databend-sql"
description = "SQL types for Databend Driver"
categories = ["database"]
keywords = ["databend", "database", "sdk"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
flight-sql = ["dep:arrow-array", "dep:arrow-schema", "dep:tonic"]

[dependencies]
databend-client = { workspace = true }

chrono = { version = "0.4", default-features = false }
glob = "0.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio-stream = "0.1"
url = { version = "2.4", default-features = false }

arrow = { version = "46.0" }
arrow-array = { version = "46.0", optional = true }
arrow-schema = { version = "46.0", optional = true }
tonic = { version = "0.9", default-features = false, features = [
    "transport",
    "codegen",
    "tls",
    "tls-webpki-roots",
    "prost",
], optional = true }
