[package]
name = "databend-driver-core"
description = "Core components for Databend Driver"
categories = ["database"]
keywords = ["databend", "database", "sdk"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
flight-sql = ["dep:arrow-array", "dep:arrow-schema", "dep:tonic"]

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
databend-client = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, optional = true }

chrono = { version = "0.4.35", default-features = false }
geozero = { version = "0.13", features = ["default", "with-wkb"] }
glob = "0.3"
hex = "0.4.3"
itertools = "0.12"
jsonb = "0.4"
lexical-core = "0.8"
memchr = "2.7"
roaring = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
url = { version = "2.5", default-features = false }
