[package]
name = "databend-store"
version = "0.1.0"
description = "A Cloud Distributed MergeTree Storage Engine"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[[bin]]
name = "databend-store"
path = "src/bin/databend-store.rs"

[features]
default = ["simd"]
simd = ["common-arrow/simd"]

[dependencies]
# Workspace dependencies
common-arrow = {path = "../common/arrow"}
common-datablocks = {path = "../common/datablocks"}
common-datavalues = {path = "../common/datavalues"}
common-exception = {path = "../common/exception"}
common-flights = {path = "../common/flights"}
common-functions = {path = "../common/functions"}
common-infallible = {path = "../common/infallible"}
common-metatypes = {path = "../common/metatypes"}
common-planners = {path = "../common/planners"}
common-profling = { path = "../common/profiling" }
common-runtime = {path = "../common/runtime"}
common-tracing = {path = "../common/tracing"}
common-uniq-id = {path = "../common/uniq_id"}

# Github dependencies

# Crates.io dependencies
anyhow = "1.0.44"
async-raft = { git = "https://github.com/datafuse-extras/async-raft", tag = "v0.6.2-alpha.14" }
async-trait = "0.1"
byteorder = "1.1.0"
env_logger = "0.9"
futures = "0.3"
indexmap = "1.7.0"
lazy_static = "1.4.0"
log = "0.4"
metrics = "0.17.0"
metrics-exporter-prometheus = "0.6.0"
num = "0.4"
num_cpus = "1.0"
prost = "0.8.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = { git = "https://github.com/datafuse-extras/sled", tag = "v0.34.7-datafuse.1",default-features = false }
structopt = "0.3"
structopt-toml = "0.5.0"
tempfile = "3.2.0"
thiserror = "1.0.29"
threadpool = "1.8.1"
tokio-stream = "0.1"
tracing-appender = "0.1.2"
tonic = { version = "0.5.2", features = ["tls"]}

sha2 = "0.9.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
axum = {version = "0.2.4", features=["headers"] }
axum-server = { version = "0.2", features = ["tls-rustls"] }

[dev-dependencies]
env_logger = "*"
pretty_assertions = "0.7"
test-env-log = "0.2.7"
flaky_test = "0.1"
maplit = "1.0.2"
tower = { version = "0.4", default-features = false, features = ["util", "buffer", "make"] }
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
common-building = {path = "../common/building"}
tonic-build = "0.5.2"
