[package]
name = "databend-nodejs"
publish = false

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
databend-driver = { workspace = true, features = ["rustls", "flight-sql"] }

chrono = { version = "0.4", default-features = false }
csv = "1.2"
napi = { version = "2.13", default-features = false, features = [
    "napi6",
    "async",
    "serde-json",
    "chrono_date",
] }
napi-derive = "2.13"
serde_json = "1.0"
tokio-stream = "0.1"

[build-dependencies]
napi-build = "2"
