[package]
name = "databend-nodejs"
publish = false

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
chrono = { workspace = true }
databend-driver = { workspace = true, features = ["rustls", "flight-sql"] }
tokio-stream = { workspace = true }

napi = { version = "2.14", default-features = false, features = [
    "napi6",
    "async",
    "serde-json",
    "chrono_date",
] }
napi-derive = "2.14"
once_cell = "1.18"

[build-dependencies]
napi-build = "2"
