[package]
name = "databend-python"
publish = false

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
crate-type = ["cdylib"]
name = "databend_driver"
doc = false

[dependencies]
chrono = { workspace = true }
databend-driver = { workspace = true, features = ["rustls", "flight-sql"] }
tokio-stream = { workspace = true }

ctor = "0.2.5"
once_cell = "1.18"
pyo3 = { version = "0.21", features = ["abi3-py37", "chrono"] }
pyo3-asyncio = { version = "0.21", features = ["tokio-runtime"] }
tokio = "1.34"
