[build-system]
build-backend = "maturin"
requires = ["maturin>=0.14.16,<0.15"]

[project]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "Databend Driver Python Binding"
license = { text = "Apache-2.0" }
name = "databend-driver"
readme = "README.md"
requires-python = ">=3.7"

[project.optional-dependencies]
benchmark = [
    "gevent",
    "greenify",
    "greenlet",
    "boto3",
    "pydantic",
    "boto3-stubs[essential]",
]
docs = ["pdoc"]
test = ["behave"]

[project.urls]
Documentation = ""
Homepage = ""
Repository = "https://github.com/datafuselabs/bendsql"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "databend_driver._databend_driver"
python-source = "python"
