[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[project]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "Databend Driver Python Binding"
license = { text = "Apache-2.0" }
name = "databend-driver"
readme = "README.md"
# PyO3 doesn't support python 3.13 yet.
# ref: https://github.com/apache/opendal/issues/4268
requires-python = ">=3.7, < 3.13"

[project.optional-dependencies]
docs = ["pdoc"]
test = ["behave"]
lint = ["black", "flake8"]

[project.urls]
Repository = "https://github.com/datafuselabs/bendsql"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "databend_driver._databend_driver"
python-source = "package"
