[package]
name = "common-allocators"
version = "0.1.0"
authors = ["Datafuse Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[features]
# Enable jemalloc for binaries
jemalloc-alloc = ["jemallocator"]

# Enable bundled tcmalloc
tcmalloc-alloc = ["tcmalloc/bundled"]

# Enable snmalloc for binaries
snmalloc-alloc = ["snmalloc-rs"]

[dependencies] # In alphabetical order
# Workspace dependencies

# Github dependencies

# Crates.io dependencies
tcmalloc= { version = "0.3", optional = true }
jemallocator = { version = "0.3", optional = true }
snmalloc-rs = { version = "0.2", optional = true }

[dev-dependencies]
