[package]
authors = ["Databend Authors <opensource@datafuselabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "common-arrow"
publish = false
version = "0.1.0"

[lib]
doctest = false
test = false

[features]
arrow-default = ["arrow/compute", "arrow/regex", "arrow/io_csv", "arrow/io_parquet", "arrow/io_json", "arrow/io_flight"]
default = ["arrow-default", "parquet-default"]
parquet-default = ["parquet2/stream", "parquet2/lz4"]
simd = ["arrow/simd"]

[dependencies] # In alphabetical order
# Workspace dependencies

# Github dependencies
arrow = { package = "arrow2", git = "https://github.com/datafuse-extras/arrow2", default-features = false, rev = "6ec9cf"}
arrow-format = { version = "0.3.0", features = ["flight-data", "flight-service"] }
parquet2 = { version = "0.8.1", default_features = false }
# Crates.io dependencies

[dev-dependencies]
