[package]
name = "common-ast"
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
doctest = false
test = false

[dependencies] # In alphabetical order
# Workspace dependencies
common-datavalues = { path = "../datavalues" }
common-exception = { path = "../exception" }
common-functions = { path = "../functions" }
common-meta-types = { path = "../meta/types" }

# Github dependencies
# TODO(andylokandy): Use the version from crates.io once
# https://github.com/brendanzab/codespan/pull/331 is released.
codespan-reporting = { git = "https://github.com/brendanzab/codespan", rev = "c84116f5" }
sqlparser = { git = "https://github.com/datafuse-extras/sqlparser-rs", rev = "d44a8e1" }

# Crates.io dependencies
async-trait = "0.1.56"
fast-float = "0.2"
itertools = "0.10"
logos = "0.12.0"
nom = "7.1.1"
nom-rule = "0.3.0"
pratt = "0.3.0"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
url = "2.2.2"

[dev-dependencies]
common-base = { path = "../base" }
glob = "0.3"
goldenfile = "1.1.0"
pretty_assertions = "1.2.1"
regex = "1.5"
