[package]
name = "common-ast"
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
doctest = false
test = false

[dependencies] # In alphabetical order
# Workspace dependencies
common-datavalues = { path = "../datavalues" }
common-exception = { path = "../exception" }
common-functions = { path = "../functions" }
common-meta-types = { path = "../meta/types" }

# Github dependencies
# TODO(andylokandy): Use the version from crates.io once
# https://github.com/brendanzab/codespan/pull/331 is released.
codespan-reporting = { git = "https://github.com/brendanzab/codespan", rev = "c84116f5" }
sqlparser = { git = "https://github.com/datafuse-extras/sqlparser-rs", rev = "d44a8e1" }

# Crates.io dependencies
async-trait = "0.1.56"
fast-float = "0.2.0"
itertools = "0.10.3"
logos = "0.12.1"
nom = "7.1.1"
nom-rule = "0.3.0"
pratt = "0.3.0"
thiserror = "1.0.31"
url = "2.2.2"

[dev-dependencies]
common-base = { path = "../base" }
glob = "0.3.0"
goldenfile = "1.3.0"
pretty_assertions = "1.2.1"
regex = "1.5.6"
