[package]
name = "common-base"
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
doctest = false
test = false

[features]
tracing = ["tokio/tracing"]
memory-profiling = [
    "tikv-jemalloc-ctl",
    "libc",
    "tikv-jemalloc-sys/stats",
    "tikv-jemalloc-sys/profiling",
    "tikv-jemalloc-sys/unprefixed_malloc_on_supported_platforms",
]

[dependencies] # In alphabetical order
# Workspace dependencies
common-exception = { path = "../exception" }
common-tracing = { path = "../tracing" }

# Github dependencies

# Crates.io dependencies
async-trait = "0.1.56"
ctrlc = { version = "3.2.2", features = ["termination"] }
futures = "0.3.21"
hyper = "0.14.19"
libc = { version = "0.2.126", optional = true }
parking_lot = "0.12.1"
poem = { version = "1.3.31", features = ["rustls"] }
pprof = { version = "0.9.1", features = [
    "flamegraph",
    "protobuf-codec",
    "protobuf",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", default-features = false, features = ["raw_value"] }
serde_yaml = { version = "0.8.24", default-features = false }
tikv-jemalloc-ctl = { version = "0.5.0", optional = true }
tikv-jemalloc-sys = "0.5.0"
tokio = { version = "1.19.2", features = ["full"] }
toml = { version = "0.5.9", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1.0.58"
common-macros = { path = "../macros" }
