[package]
name = "common-building"
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
common-tracing = { path = "../tracing" }

cargo-license = { git = "https://github.com/datafuse-extras/cargo-license", rev = "f1ce4a2" }

anyhow = "1.0.58"
cargo_metadata = "0.14.2"
git2 = { version = "0.14.4", default-features = false }
vergen = "7.2.1"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
