cargo-features = ["edition2021"]

[package]
name = "common-cache"
version = "0.1.0"
authors = ["Datafuse Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies] # In alphabetical order
# Workspace dependencies

# Github dependencies

# Crates.io dependencies

