[package]
name = "common-cache"
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[features]
heapsize = ["heapsize_"]
amortized = ["ritelinked/ahash-amortized", "ritelinked/inline-more-amortized"]

[dependencies] # In alphabetical order
# Workspace dependencies

# Github dependencies

# Crates.io dependencies
filetime = "0.2.15"
log = "0.4"
ritelinked  = { version = "0.3.2", default-features = false, features = ["ahash", "inline-more"] }
walkdir = "2.3.2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
heapsize_ = { package = "heapsize", version = "0.4.2", optional = true}

[dev-dependencies]
tempfile = "3"
