[package]
name = "common-cache"
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
doctest = false
test = false

[features]
heapsize = ["heapsize_"]
amortized = ["ritelinked/ahash-amortized", "ritelinked/inline-more-amortized"]

[dependencies] # In alphabetical order
# Workspace dependencies
common-tracing = { path = "../tracing" }
common-exception = { path = "../exception" }

# Github dependencies

# Crates.io dependencies
async-trait = "0.1.52"
filetime = "0.2.15"
ritelinked  = { version = "0.3.2", default-features = false, features = ["ahash", "inline-more"] }
walkdir = "2.3.2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
heapsize_ = { package = "heapsize", version = "0.4.2", optional = true }

[dev-dependencies]
tempfile = "3.3.0"
