[package]
name = "common-catalog"
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
common-base = {path = "../base"}
common-arrow = {path = "../arrow"}
common-datavalues = {path = "../datavalues"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"
