[package]
name = "common-catalog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[dependencies]
common-base = { path = "../base" }
common-config = { path = "../config" }
common-contexts = { path = "../contexts" }
common-datablocks = { path = "../datablocks" }
common-datavalues = { path = "../datavalues" }
common-exception = { path = "../exception" }
common-functions = { path = "../functions" }
common-fuse-meta = { path = "../fuse-meta" }
common-io = { path = "../io" }
common-meta-app = { path = "../meta/app" }
common-meta-types = { path = "../meta/types" }
common-pipeline = { path = "../pipeline" }
common-planners = { path = "../planners" }
common-settings = { path = "../settings" }
common-streams = { path = "../streams" }
common-users = { path = "../users" }

async-trait = "0.1.56"
dyn-clone = "1.0.6"
opendal = { version = "0.11.3", features = ["retry"] }
parking_lot = "0.12.1"
time = "0.3.10"
